# rainfall.c

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  Thrice.md
inc/: rainfall.h  rf_buffer.h  rf_launcher.h  rf_loader.h  rf_modeler.h  rf_status.h  rf_string.h
res/: build.c  copy.tr  test.tr
res/Name/: Main.tr  Prelude.tr
res/TestPackage/: Main.tr  Prelude.tr
src/: allocation.c  lib.c  list.c  main.c  rf_allocator.c  rf_allocator.h  rf_allocator_debug.c  rf_allocator_release.c  rf_filesystem.c  rf_filesystem.h  rf_filesystem_windows.c  rf_internal.h  rf_launcher.c  rf_loader.c  rf_modeler.c  rf_string.c  rf_tester.c  rf_tester.h  string.c  test.c
src/analyzer/: analyzer.c  api.h  evaluation.c  mod.h  number.c  table.c  type.c
src/anr/: analyzer.c  api.h  checker.c  evaluation.c  mod.h  number.c  resolver.c  table.c  type.c
src/dbg/: api.h  mod.c
src/generator/: api.h  generator.c
src/lexer/: api.h  lex.c  lexeme.c  lexer.c  mod.h
src/lxr/: api.h  lex.c  lexeme.c  lexer.c  mod.h
src/otc/: api.h  location.c  mod.h  outcome.c  portion.c  source.c
src/parser/: api.h  expression.c  mod.h  operator.c  parse.c  parser.c
src/psr/: api.h  expression.c  mod.h  operator.c  parse.c  parser.c
src/source/: api.h  location.c  mod.h  portion.c  source.c
src/utility/: api.h  buffer.c  map.c  mod.c  set.c  string.c
src/utl/: api.h  buffer.c  map.c  set.c  string.c
